<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_00a1d5"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/simple_config_title"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="10dp">

        <com.lodz.android.pandora.widget.collect.radio.CltRadioGroup
            android:id="@+id/audio_format_crg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:radioType="single"
            app:requiredVisibility="gone"
            app:spanCount="3"
            app:titleText="@string/simple_audio_format">

        </com.lodz.android.pandora.widget.collect.radio.CltRadioGroup>

        <com.lodz.android.pandora.widget.collect.radio.CltRadioGroup
            android:id="@+id/sample_rate_crg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="8dp"
            app:radioType="single"
            app:requiredVisibility="gone"
            app:spanCount="3"
            app:titleText="@string/simple_sample_rate">

        </com.lodz.android.pandora.widget.collect.radio.CltRadioGroup>

        <com.lodz.android.pandora.widget.collect.radio.CltRadioGroup
            android:id="@+id/encoding_crg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="8dp"
            app:radioType="single"
            app:requiredVisibility="gone"
            app:spanCount="3"
            app:titleText="@string/simple_encoding">

        </com.lodz.android.pandora.widget.collect.radio.CltRadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/color_00a1d5"
            android:text="@string/simple_cancel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ok_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/color_00a1d5"
            android:text="@string/simple_ok" />

    </LinearLayout>

</LinearLayout>